changes in trip and bus logic
